@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -107,12 +107,9 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
                         Collectors.toSet());
 
         if (StandardBundlerParam.isRuntimeInstaller(params)) {
-            launcherPaths = Collections.emptyList();
+            launchers = Collections.emptyList();
         } else {
-            launcherPaths = AppImageFile.getLauncherNames(appImageRoot, params).stream()
-                    .map(name -> installedAppImage.launchersDirectory().resolve(name))
-                    .map(WixAppImageFragmentBuilder::addExeSuffixToPath)
-                    .collect(Collectors.toList());
+            launchers = AppImageFile.getLaunchers(appImageRoot, params);
         }
 
         programMenuFolderName = MENU_GROUP.fetchFrom(params);
@@ -162,7 +159,7 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
 
         // Filter out empty extensions.
         fa.extensions = fa.extensions.stream().filter(Predicate.not(
-                String::isEmpty)).collect(Collectors.toList());
+                String::isEmpty)).toList();
     }
 
     private static Path addExeSuffixToPath(Path path) {
@@ -179,7 +176,7 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
                 .peek(this::normalizeFileAssociation)
                 // Filter out file associations without extensions.
                 .filter(fa -> !fa.extensions.isEmpty())
-                .collect(Collectors.toList());
+                .toList();
 
         associations.stream().filter(fa -> fa.iconPath != null).forEach(fa -> {
             // Need to add fa icon in the image.
@@ -411,13 +408,23 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
             XMLStreamException, IOException {
         List<String> componentIds = new ArrayList<>();
         Set<ShortcutsFolder> defineShortcutFolders = new HashSet<>();
-        for (var launcherPath : launcherPaths) {
+        for (var launcher : launchers) {
             for (var folder : shortcutFolders) {
-                String componentId = addShortcutComponent(xml, launcherPath,
-                        folder);
-                if (componentId != null) {
-                    defineShortcutFolders.add(folder);
-                    componentIds.add(componentId);
+                Path launcherPath = addExeSuffixToPath(installedAppImage
+                        .launchersDirectory().resolve(launcher.getName()));
+
+                if ((launcher.isMenu() &&
+                        (folder.equals(ShortcutsFolder.ProgramMenu))) ||
+                    (launcher.isShortcut() &&
+                        (folder.equals(ShortcutsFolder.Desktop)))) {
+
+                    String componentId = addShortcutComponent(xml, launcherPath,
+                            folder);
+
+                    if (componentId != null) {
+                        defineShortcutFolders.add(folder);
+                        componentIds.add(componentId);
+                    }
                 }
             }
         }
@@ -600,7 +607,7 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
             for (var dir : allDirs.stream()
                     .filter(Predicate.not(emptyDirs::contains))
                     .filter(Predicate.not(removeFolderItems::containsKey))
-                    .collect(Collectors.toList())) {
+                    .toList()) {
                 componentIds.add(addRemoveDirectoryComponent(xml, dir));
             }
         }
@@ -824,7 +831,7 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
 
     private Set<ShortcutsFolder> shortcutFolders;
 
-    private List<Path> launcherPaths;
+    private List<AppImageFile.LauncherInfo> launchers;
 
     private ApplicationLayout appImage;
     private ApplicationLayout installedAppImage;
@@ -832,29 +839,29 @@ class WixAppImageFragmentBuilder extends WixFragmentBuilder {
     private Map<Path, Integer> removeFolderItems;
     private Set<String> defaultedMimes;
 
-    private final static Path TARGETDIR = Path.of("TARGETDIR");
+    private static final Path TARGETDIR = Path.of("TARGETDIR");
 
-    private final static Path INSTALLDIR = Path.of("INSTALLDIR");
+    private static final Path INSTALLDIR = Path.of("INSTALLDIR");
 
-    private final static Set<Path> ROOT_DIRS = Set.of(INSTALLDIR, TARGETDIR);
+    private static final Set<Path> ROOT_DIRS = Set.of(INSTALLDIR, TARGETDIR);
 
-    private final static Path PROGRAM_MENU_PATH = TARGETDIR.resolve("ProgramMenuFolder");
+    private static final Path PROGRAM_MENU_PATH = TARGETDIR.resolve("ProgramMenuFolder");
 
-    private final static Path DESKTOP_PATH = TARGETDIR.resolve("DesktopFolder");
+    private static final Path DESKTOP_PATH = TARGETDIR.resolve("DesktopFolder");
 
-    private final static Path PROGRAM_FILES = TARGETDIR.resolve(
+    private static final Path PROGRAM_FILES = TARGETDIR.resolve(
             is64Bit() ? "ProgramFiles64Folder" : "ProgramFilesFolder");
 
-    private final static Path LOCAL_PROGRAM_FILES = TARGETDIR.resolve("LocalAppDataFolder");
+    private static final Path LOCAL_PROGRAM_FILES = TARGETDIR.resolve("LocalAppDataFolder");
 
-    private final static Set<Path> SYSTEM_DIRS = Set.of(TARGETDIR,
+    private static final Set<Path> SYSTEM_DIRS = Set.of(TARGETDIR,
             PROGRAM_MENU_PATH, DESKTOP_PATH, PROGRAM_FILES, LOCAL_PROGRAM_FILES);
 
-    private final static Set<Path> KNOWN_DIRS = Stream.of(Set.of(INSTALLDIR),
+    private static final Set<Path> KNOWN_DIRS = Stream.of(Set.of(INSTALLDIR),
             SYSTEM_DIRS).flatMap(Set::stream).collect(
             Collectors.toUnmodifiableSet());
 
-    private final static Set<Path> USER_PROFILE_DIRS = Set.of(LOCAL_PROGRAM_FILES,
+    private static final Set<Path> USER_PROFILE_DIRS = Set.of(LOCAL_PROGRAM_FILES,
             PROGRAM_MENU_PATH, DESKTOP_PATH);
 
     private static final StandardBundlerParam<String> MENU_GROUP =
